@@ -3,6 +3,11 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20rc1
 
+	- Added backend tweeks and content-length check from Red
+	  Hat (STR #253)
+	- The USB backend now uses the 8255 constants instead of
+	  the standard constants when reporting printer status
+	  bits on Linux (STR #254)
 	- Added new cupsDoAuthentication(), cupsGetFd(),
 	  cupsGetFile(), cupsPutFd(), and cupsPutFile() functions
 	  to the CUPS API (STR #112)
